<resources>
    <string name="app_name">Dragons Hockey</string>
    <string name="action_settings">Settings</string>
    <string name="dragons_hockey">Dragons Hockey</string>
    <string name="last_game">Last Game</string>
    <string name="next_game">Next Game</string>
    <string name="last_game_score"><b>Dragons</b> %1$d   <b>%2$s</b> %3$d  (%4$s)</string>
    <string name="schedule">View Schedule</string>
    <string name="no_more_games">Wait till next season</string>
    <string name="update_pending">Game update pending</string>
    <string name="roster_unavailable">Unable to retrieve roster at this time.</string>
    <string name="injured_reserve">Injured Reserve</string>
    <string name="dragons_hockey_team_logo">Dragons Hockey Team Logo</string>
    <string name="win_header">W</string>
    <string name="loss_header">L</string>
    <string name="otl_header">OTL</string>
    <string name="tie_header">T</string>
    <string name="roster_caps">ROSTER</string>
    <string name="today_gameday">"Today %1$s (%2$s)"</string>
    <string name="today_gameday_notification">"Today %1$s (%2$s) vrs %3$s"</string>
    <string name="gameday">"%1$s (%2$s)"</string>
    <string name="gameday_notification">"%1$s (%2$s) vrs %3$s"</string>
    <string name="error_loading">Error loading data, check internet and please try again</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="goals">Goals</string>
    <string name="games">Games</string>
    <string name="assists">Assists</string>
    <string name="points">Points</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="sign_in_with_google">This feature requires authentication to access</string>
    <string name="stats_title">Stats</string>
    <string name="roster_title">Roster</string>
    <string name="schedule_title">Schedule</string>
    <string name="auth_title">Admin Auth</string>
    <string name="game_id">Game ID:</string>
    <string name="game_date">Game Date:</string>
    <string name="opponent">Opponent:</string>
    <string name="title_activity_edit_game_auth">Edit Game</string>
    <string name="opponent_hint">Opponent</string>
    <string name="edit_game_game_id">Game ID: %d</string>
    <string name="title_activity_edit_stats_auth">EditStatsAuthActivity</string>
    <string name="admin_access_email">slapshotapps2+1@gmail.com</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="google_services_unavailable">Unable to connect to google services, please try later</string>
    <string name="invalid_login">Invalid login</string>
    <string name="try_again">Your login was incorrect, please try again</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="PIM_label">PIM</string>
    <string name="schedule_notification_channel">Hockey Schedule Notifications</string>
    <string name="schedule_notification_channel_desc">Dragons Hockey Game Notifications</string>
    <string name="opponent_versus">Vrs: %1$s</string>
    <string name="notification_title">Dragons Hockey Game</string>

    <string-array name="stat_sort_options">
        <item>Games Played</item>
        <item>Goals</item>
        <item>Assists</item>
        <item>Points</item>
        <item>Penalty Minutes</item>
    </string-array>
</resources>
