<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_home"
    tools:context="com.slapshotapps.dragonshockey.HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dragons_hockey"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:id="@+id/dragons_hockey"
        android:layout_marginTop="72dp"
        app:layout_constraintLeft_toLeftOf="@+id/content_home"
        app:layout_constraintTop_toTopOf="@+id/content_home"
        app:layout_constraintRight_toRightOf="@+id/content_home"/>

    <TextView
        android:id="@+id/last_game_header"
        android:text="@string/last_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginTop="104dp"
        app:layout_constraintLeft_toLeftOf="@+id/content_home"
        app:layout_constraintTop_toBottomOf="@+id/dragons_hockey"
        app:layout_constraintRight_toRightOf="@+id/content_home"/>

    <TextView
        android:id="@+id/next_game_header"
        android:text="@string/next_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="@+id/content_home"
        app:layout_constraintTop_toBottomOf="@+id/last_game_score"
        app:layout_constraintRight_toRightOf="@+id/content_home"/>

    <TextView
        android:id="@+id/last_game_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Dragons 8  Oranges 5"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/content_home"
        app:layout_constraintTop_toBottomOf="@+id/last_game_header"
        app:layout_constraintRight_toRightOf="@+id/content_home"/>

    <TextView
        android:id="@+id/next_game_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="12/24/16 8:00pm"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/content_home"
        app:layout_constraintTop_toBottomOf="@+id/next_game_header"
        app:layout_constraintRight_toRightOf="@+id/content_home"/>

</android.support.constraint.ConstraintLayout>
