<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/player_stats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:elevation="2dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="John Doe"
                style="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/player_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@id/player_name"
                app:layout_constraintStart_toEndOf="@id/player_name"
                tools:text="(F)"
                style="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/games_played_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.55"
                style="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/games_played"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@id/games_played_header"
                app:layout_constraintEnd_toEndOf="@id/games_played_header"
                app:layout_constraintTop_toBottomOf="@id/games_played_header"
                tools:text="7"
                style="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/goals_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goals"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.55"
                style="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/games_played"
                app:layout_constraintStart_toStartOf="@id/goals_header"
                app:layout_constraintEnd_toEndOf="@id/goals_header"
                app:layout_constraintTop_toBottomOf="@+id/goals_header"
                tools:text="1"
                style="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/assists_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assists"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.55"
                style="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/assists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/games_played"
                app:layout_constraintStart_toStartOf="@id/assists_header"
                app:layout_constraintEnd_toEndOf="@id/assists_header"
                tools:text="2"
                style="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/points_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.55"
                style="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/games_played"
                app:layout_constraintStart_toStartOf="@id/points_header"
                app:layout_constraintEnd_toEndOf="@id/points_header"
                tools:text="2"
                style="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/penalty_minutes_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PIM_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.55"
                style="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/penalty_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/games_played"
                app:layout_constraintStart_toStartOf="@id/penalty_minutes_header"
                app:layout_constraintEnd_toEndOf="@id/penalty_minutes_header"
                tools:text="20"
                style="@style/TextAppearance.AppCompat.Small"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
